--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,11 +14,13 @@
     <color name="input_register_bg">#3b4148</color>
     <color name="input_register_hint">#5e6266</color>
     <color name="btn_login">#26ae90</color>
+    <color name="snackbar_ok">#26ae90</color>
     <color name="btn_login_bg">#eceef1</color>
     <color name="lbl_name">#333333</color>
     <color name="btn_logut_bg">#ff6861</color>
     <color name="mat_press">#1565C0</color>
-    <color name="mat_normal">#1976D2</color>
+    <color name="mat_normal">#1976d2</color>
+    <color name="snackbar">#FF715B</color>
 
     <color name="year">#999999</color>
     <color name="title">#222222</color>
