--- a/app/src/main/res/layout/fragment_league_table.xml
+++ b/app/src/main/res/layout/fragment_league_table.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:background="@color/white"
     tools:context="info.androidhive.firebase.Fragments.LeagueTableFragment">
 
     <android.support.v7.widget.RecyclerView
