--- a/app/src/main/res/layout/item_divider.xml
+++ b/app/src/main/res/layout/item_divider.xml
@@ -1,5 +1,5 @@
 <View xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="1dp"
     android:layout_marginBottom="8dp"
     android:layout_marginTop="8dp"
