--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -215,6 +215,40 @@
                             android:layout_alignParentRight="true"
                             android:layout_alignParentEnd="true" />
                     </RelativeLayout>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@android:color/darker_gray" />
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="?attr/selectableItemBackground"
+                        android:clickable="true"
+                        android:padding="16dp">
+
+                        <TextView
+                            android:id="@+id/theme"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentTop="true"
+                            android:fontFamily="@string/roboto_regular"
+                            android:text="Theme"
+                            android:textColor="@color/dark"
+                            android:textSize="@dimen/material_text_subhead" />
+
+                        <TextView
+                            android:id="@+id/theme_change"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentTop="true"
+                            android:fontFamily="@string/roboto_regular"
+                            android:text="Default"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="@dimen/material_text_subhead"
+                            android:layout_centerVertical="true"
+                            android:layout_alignParentRight="true"
+                            android:layout_alignParentEnd="true" />
+                    </RelativeLayout>
                 </LinearLayout>
             </android.support.v7.widget.CardView>
             <android.support.v7.widget.CardView
@@ -240,6 +274,7 @@
                         android:textSize="@dimen/material_text_subhead" />
 
                     <RelativeLayout
+                        android:id="@+id/bottomsheet_faq_relative"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="?attr/selectableItemBackground"
