--- a/app/src/main/res/layout/fragment_league_table_test.xml
+++ b/app/src/main/res/layout/fragment_league_table_test.xml
@@ -2,7 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="#ccc"
     android:fitsSystemWindows="true">
 
     <android.support.design.widget.AppBarLayout
@@ -44,16 +44,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <TextView
-            android:id="@+id/aaa"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/faq" />
-    </RelativeLayout>
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -62,19 +52,35 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/aaa"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:nestedScrollingEnabled="true"
+                android:text="faq"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
             <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/aaa">
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/scrollableview"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scrollbars="vertical"
+
                     app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+
             </RelativeLayout>
+        </RelativeLayout>
 
     </android.support.v4.widget.NestedScrollView>
-
 
 </android.support.design.widget.CoordinatorLayout>
