--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="30dp"
         android:gravity="center"
         android:orientation="vertical"
-        android:padding="@dimen/activity_horizontal_margin">
+        android:padding="@dimen/margin_16dp">
 
 
         <ImageView
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:gravity="center_horizontal"
-            android:padding="@dimen/activity_horizontal_margin"
+            android:padding="@dimen/margin_16dp"
             android:text="@string/forgot_password_msg"
             android:textColor="@android:color/white"
             android:textSize="14dp" />
