--- a/app/src/main/res/layout/bottom_sheet_faq.xml
+++ b/app/src/main/res/layout/bottom_sheet_faq.xml
@@ -19,8 +19,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@string/roboto_regular"
-            android:padding="@dimen/activity_horizontal_margin"
-            android:text="@string/faq"
+            android:padding="@dimen/margin_16dp"
+            android:text="@string/settings_faq"
             android:textAppearance="@android:style/TextAppearance.Large"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="20sp" />
