--- a/app/src/main/res/layout/dialog_photo.xml
+++ b/app/src/main/res/layout/dialog_photo.xml
@@ -10,13 +10,20 @@
         android:id="@+id/dialogTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Edit photo"
+        android:text="Photo"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
-    <EditText
-        android:id="@+id/userInputDialog"
+    <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter Something"
-        android:inputType="text" />
+        android:text="Load from gallery"
+        android:id="@+id/buttonGallery" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Take photo"
+        android:id="@+id/buttonCamera"
+        android:layout_gravity="center_horizontal" />
+
 </LinearLayout>
